Fixes RTE line widget displaying behind selection highlight.

--- a/tool-ui/src/main/webapp/style/v3/rte2.less
+++ b/tool-ui/src/main/webapp/style/v3/rte2.less
@@ -457,12 +457,10 @@ li.CodeMirror-hint-active {
   font-size: 70%;
 }
 
-// For enhancements, let the enhancement toolbar overflow the codemirror widget,
-// and reset the z-index because it was causing problems with the submenu hover
+// For enhancements, let the enhancement toolbar overflow the codemirror widget.
 .rte2-codemirror {
   .CodeMirror-linewidget {
     overflow: visible;
-    z-index: inherit;
   }
 }
 
